# CAVPsim

./: .gitignore  README.md  v00_Tx_broadcast_0_215_215.bag
bags/: 2021-04-12-15-22-56.bag  2021-05-16-00-01-43.bag
bags/v01_Rx_sim/: 2020-12-17-20-50-47.bag
raw_data/: vehNo_01_RxCAM_LP_mr.mat
results/: ZDT1_dg_agents2to6.fig  scenario1_2agents.fig  scenario1_6agents.fig  scenario2_2agents.fig  scenario2_6agents.fig
src/cav_vehicle_model/: CMakeLists.txt  package.xml
src/cav_vehicle_model/launch/: cav_vehicle_model.launch  control.launch  two_vehicle.launch
src/cav_vehicle_model/src/: dummy_control.cpp  dummy_control_simple.cpp  model (another copy).cpp  model copy.cpp  model.cpp
src/cavpsim_gui/: CMakeLists.txt  mainpage.dox  package.xml
src/cavpsim_gui/include/cavpsim_gui/: VehicleModelTab.hpp  main_window.hpp  qnode.hpp
src/cavpsim_gui/src/: main.cpp  main_window.cpp  qnode.cpp
src/cavpsim_gui/ui/: main_window.ui
src/common_tutorials-indigo-devel/nodelet_tutorial_math/: plus.launch
src/communication_gate/: CMakeLists.txt  package.xml
src/communication_gate/launch/: default.launch
src/communication_gate/src/: gate_node.cpp
src/communication_model/: CMakeLists.txt  communication_model.xml  communication_model.yaml  package.xml
src/communication_model/launch/: default.launch  default_orig.launch
src/communication_model/src/: backbone_model.cpp  itsG5.cpp  itsG5_bristol.cpp  itsG5_bristol_nodelet.cpp
src/computation_model/: CMakeLists.txt  package.xml
src/computation_model/launch/: default.launch
src/computation_model/src/: compute_model _last.cpp  compute_model.cpp  compute_model_original.cpp
src/enviornment/map/vector/: area.csv  crosswalk.csv  curb.csv  dtlane.csv  idx.csv  lane.csv  line.csv  node.csv  point.csv  pole.csv  signaldata.csv  stopline.csv  utilitypole.csv  vector.csv  wayarea.csv
src/launch_files/: PLANNING_RADVEGA_SINGLE.launch  VEGA_demo.launch  ZDT_RADVEGA_SINGLE.launch  ZDT_RADVEGA_SOLVER.launch  common.launch  demo.launch  refresh.launch  sim_general.launch
src/launch_scripts/: CDDP_RADVEGA_SOLVER.sh  ZDT_RADVEGA_SOLVER.sh
src/messages/CAVPsim/communication_msgs/: CMakeLists.txt  package.xml
src/messages/CAVPsim/computation_msgs/: CMakeLists.txt  package.xml
src/messages/CAVPsim/computation_msgs/msg/: NET_MEMBER.msg  RAD_VEGA_POPULATION.msg  RAD_VEGA_SOLUTION.msg  VEGA.msg  VEGA_stat.msg  status.msg
src/messages/CAVPsim/cooperative_msgs/: CMakeLists.txt  package.xml
src/messages/CAVPsim/solver_msgs/: package.xml
src/messages/CAVPsim/solver_msgs/msg/: finalSolutionArr.msg  selectedSolution.msg  solutionHolder.msg  solutionHolderArr.msg
src/solver/: CMakeLists.txt  package.xml
src/solver/launch/: RAD_VEGA_PLANNING.launch  RAD_VEGA_ZDT.launch  VEGA.launch  default.launch
src/solver/src/: RAD_VEGA.cpp  ZDT_solver_VEGA.cpp  solver (another copy).cpp  solver (copy).cpp  solver.cpp  solver_VEGA.cpp
src/solver_nodelet/: CMakeLists.txt  package.xml  plus.launch  plus1.launch  plus2.launch  plus3.launch  plus_default.yaml  solver_1.launch  solver_1.yaml  solver_nodelet.xml
src/solver_nodelet/src/: plus.cpp  solver_1.cpp  solver_1_new.cpp
src/tools/cavp_python_tools/: CMakeLists.txt  package.xml
src/tools/cavp_python_tools/launch/: default.launch
src/tools/cavp_python_tools/resources/: .~lock.v01_Rx_from_v00_Tx_9k_10k_215.csv#  v00_Tx_broadcast_0_215_215.csv  v01_Rx_from_v00_Tx_9k_10k_215.csv
src/tools/cavp_python_tools/src/: 2020-12-21-00-51-45.bag  bag_to_csv.py  clock_gen.py  mat_reader.py  plotter.cpp  plotter.py  plotter_control.py
src/tools/cavpsim_clock_server/: CMakeLists.txt  package.xml
src/tools/cavpsim_clock_server/launch/: default.launch
src/tools/cavpsim_clock_server/src/: cavpsim_clock_node.cpp
src/tools/messages/communication_msgs/: CMakeLists.txt  package.xml
src/tools/messages/communication_msgs/msg/: BristolRx.msg  BristolTx.msg  ComMessage.msg
src/tools/messages/computation_msgs/: CMakeLists.txt  package.xml
src/tools/messages/model_msgs/: CMakeLists.txt  package.xml
src/tools/messages/solver_msgs/: CMakeLists.txt  package.xml
src/tools/messages/solver_msgs/msg/: finalSolution.msg  selectedSolution.msg  solutionHolder.msg
src/tools/messages/vehicle_model_msgs/: CMakeLists.txt  package.xml
src/tools/okan_linea/: CMakeLists.txt  carModel.xml  model1.xml  myModel.xml  myModel_old.xml  package.xml  velodyne32.xml
src/tools/okan_linea/launch/: display.launch
src/tools/okan_linea/src/: state_publisher.cpp
src/tools/rviz/: cavpsim_config.rviz  default.rviz
src/tools/sim_runner/: CMakeLists.txt  package.xml
src/tools/sim_runner/launch/: cddp_init.launch  default.launch
src/tools/sim_runner/src/: cddp_init.cpp
src/tools/zdt_runner/: CMakeLists.txt  package.xml
src/tools/zdt_runner/include/: Timer.h
src/tools/zdt_runner/launch/: default.launch
src/tools/zdt_runner/src/: zdt_init.cpp
src/vehicle_model/: CMakeLists.txt  package.xml
src/vehicle_model/launch/: control.launch  default.launch  two_vehicle.launch  vehicle_model.launch
src/vehicle_model/src/: dummy_control.cpp  dummy_control_simple.cpp  model (another copy).cpp  model (copy).cpp  model.cpp
(+71 files in other folders)
