<?xml version="1.0"?>
<package format="2">
  <name>solver_msgs</name>
  <version>1.12.0</version>
  <description>solver_msgs</description>
  <maintainer email="rghahremani@stu.okan.edu.tr">Okan University</maintainer>
  <author email="rghahremani@stu.okan.edu.tr">ADASTEC</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>cav_vehicle_model_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
