<?xml version="1.0"?>
<package format="2">
  <name>communication_msgs</name>
  <version>1.12.0</version>
  <description>The communication_msgs package</description>
  <maintainer email="rghahremani@stu.okan.edu.tr">Okan University</maintainer>
  <author email="rghahremani@stu.okan.edu.tr">ADASTEC</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>vehicle_model_msgs</depend>
  <depend>solver_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
